tests/lexer/invalid-token.stderr
error: unknown token
 --> $DIR/invalid-token.lox:1:1
  |
1 | @
  | ^
